bk_ida/gccida/g2/combine_instructions
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:976:4: error: expected ';' after expression
rtx v9; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:976:5: error: use of undeclared identifier 'v9'
rtx v9; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:977:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:980:4: error: expected ';' after expression
rtx v13; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:980:5: error: use of undeclared identifier 'v13'
rtx v13; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:987:4: error: expected ';' after expression
rtx v21; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:987:5: error: use of undeclared identifier 'v21'
rtx v21; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:993:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:1006:25: error: expected expression
reg_last_death = ( rtx *)xmalloc( v2); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:1007:23: error: expected expression
reg_last_set = ( rtx *)xmalloc( v2); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:1008:29: error: expected expression
reg_last_set_value = ( rtx *)xmalloc( v2); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:1012:37: error: expected expression
reg_last_set_mode = ( machine_mode *)xmalloc( v3); 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:1012:23: error: use of undeclared identifier 'machine_mode'
reg_last_set_mode = ( machine_mode *)xmalloc( v3); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:1032:1: error: use of undeclared identifier 'v9'
v9 = f; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:1043:7: error: use of undeclared identifier 'v9'
v11 = v9->fld[0].rtint; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:1045:14: error: use of undeclared identifier 'v9'
subst_insn = v9; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:1048:18: error: use of undeclared identifier 'v9'
v12 = *( _WORD *)v9; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:1049:27: error: use of undeclared identifier 'v9'
if ( rtx_class[*( _WORD *)v9] == 105 ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/combine.c:1051:22: error: expected expression
note_stores( *( rtx *)&v9[2], set_nonzero_bits_and_sign_copies, 0LL); 
                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_instructions/src/obj/combine.o] Error 1
